@@ -1,3 +1,8 @@
+2019-11-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/91355
+	* g++.dg/torture/pr91355.C: New test.
+
 2019-11-20  Peter Bergner  <bergner@linux.ibm.com>
 
 	Backport from mainline
